# teremock

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  rustfmt.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  publish-macros.yml  publish.yml  release-macros.yml  release.yml
articles/: introduction.en.md  introduction.md
examples/album_bot/: Cargo.toml
examples/album_bot/src/: main.rs
examples/calculator_bot/: Cargo.toml
examples/calculator_bot/src/: handler_tree.rs  main.rs  tests.rs
examples/deep_linking_bot/: Cargo.toml
examples/deep_linking_bot/src/: main.rs  tests.rs
examples/file_download_bot/: Cargo.toml
examples/file_download_bot/src/: main.rs
examples/hello_world_bot/: Cargo.toml
examples/hello_world_bot/src/: main.rs
examples/phrase_bot/: Cargo.toml
examples/phrase_bot/migrations/: 20240714000001_init_schema.sql
examples/phrase_bot/src/: main.rs
examples/phrase_bot/src/db/: mod.rs  models.rs
examples/phrase_bot/src/handlers/: private.rs  public.rs
examples/phrase_bot/src/resources/: handler_tree.rs
teremock/: Cargo.toml  LICENSE
teremock/src/: lib.rs  mock_bot.rs  state.rs  tests.rs  utils.rs
teremock/src/dataset/: chat.rs  chat_full_info.rs  message.rs  message_common.rs  mod.rs  queries.rs  tests.rs  update.rs
teremock/src/server/: messages.rs  mod.rs
teremock/src/server/routes/: answer_callback_query.rs  ban_chat_member.rs  common.rs  copy_message.rs  delete_message.rs  download_file.rs  edit_message_text.rs  forward_message.rs  get_file.rs  mod.rs  pin_chat_message.rs  restrict_chat_member.rs  send_animation.rs  send_audio.rs  send_chat_action.rs  send_contact.rs  send_dice.rs  send_document.rs  send_invoice.rs  send_location.rs  send_media_group.rs  send_message.rs  send_photo.rs  send_poll.rs  send_sticker.rs  send_venue.rs  send_video.rs  send_video_note.rs  send_voice.rs  set_message_reaction.rs  set_my_commands.rs  unban_chat_member.rs  unpin_all_chat_messages.rs  unpin_chat_message.rs
teremock_macros/: Cargo.toml
teremock_macros/src/: lib.rs
