[package]
name = "album_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.17", features = ["macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
dotenvy = "0.15"
log = "0.4"
pretty_env_logger = "0.5"

[dev-dependencies]
teremock = { path = "../../teremock" }
