[package]
name = "phrase_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.17", features = ["macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
pretty_env_logger = "0.5"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "migrate"] }

[dev-dependencies]
teremock = { path = "../../teremock" }
